# multicalibration

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  example.py  hyperparameter_search.py  multiclass.py  utils.py
src/multicalibration/: __init__.py  mcb.py
src/multicalibration/HJZ/: adversary.py  hjz.py  online_learners.py  utils.py
src/multicalibration/HKRR/: hkrr.py  hkrr_multiclass.py
tests/: unit_tests.py
